crates/toml_edit/tests/snapshots/invalid/inline-table/overwrite-06.stderr
TOML parse error at line 1, column 14
  |
1 | a = { b = 1, b.c = 2 }
  |              ^
cannot extend value of type integer with a dotted key
